fix(notification): margin, z-index, refactor
- use `kv` prefix in the new class to represent `kappnav`.  It is the
first and last letter of `kappnav`.  This models how Carbon uses `bx`
for bluemix.

- Overwrite carbons default .bx--toast-notification:first-child margin
by specifying a more specific CSS selector by selecting two class
siblings: .bx--toast-notification.kv--toaster-notification

- Move all of the .toaster-style styling to the new
.kv--toaster-notification class.

- Give notifications a z-index of 6002 to match the header's z-index in
header.scss.

--- a/scss/notification.scss
+++ b/scss/notification.scss
@@ -15,19 +15,21 @@
  * limitations under the License.
  *
  *****************************************************************/
-
-.toaster-style {
-    min-width: 30rem;
-    margin: 3rem 0 0 0;
-    right: 0;
-    position: absolute;
-    z-index: 10;
+.bx--toast-notification {
+    &.kv--toaster-notification,
+    &.kv--toaster-notification:first-child {
+        min-width: 30rem;
+        margin: 3rem 0 0 0;
+        right: 0;
+        position: absolute;
+        z-index: 6002;
+    }
 }
 
-.bx--toast-notification__title{
+.bx--toast-notification__title {
     font-size: 1.1rem;
 }
-.bx--toast-notification__caption{
+.bx--toast-notification__caption {
     font-size: 1rem;
 }
 
